# MemoryCleanr

./: AGENTS.md  Cargo.toml  README.md  README_EN.md
docs/: CHANGELOG.md
locales/: zh-CN.yml
src/: app.rs  icon_cache.rs  log.rs  main.rs  optimize.rs  settings.rs  tray.rs
src/app/: clipboard_ops.rs  mod.rs  pinned_card.rs
src/ui/: clipboard_item_card.rs  clipboard_panel.rs  layout.rs  memory_card.rs  mod.rs  settings_page.rs  tearoff_drag_preview.rs  theme.rs  title_bar.rs
src/win32/: clipboard.rs  focus.rs  mod.rs  nt.rs  os.rs  process.rs  window.rs
