[package]
name = "memory-cleanr"
version = "1.0.1"
edition = "2024"
rust-version = "1.96"
description = "Memory Cleaner"

[package.metadata.winres]
OriginalFilename = "MemoryCleanr.exe"
FileDescription = "Memory Cleaner"
ProductName = "Memory Cleaner"
InternalName = "MemoryCleanr"

[[bin]]
name = "MemoryCleanr"
path = "src/main.rs"

[lib]
name = "memory_cleanr"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow = "1"
bitflags = "2"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "0775df394083c1ed74f36f846b78868d1267398f" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "0775df394083c1ed74f36f846b78868d1267398f" }
serde = { version = "1", features = ["derive"] }
smol = "2"
raw-window-handle = "0.6"
tray-icon = { version = "0.24", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
toml = { version = "1", default-features = false, features = ["parse", "display", "serde"] }
rust-i18n = "4"
windows = { version = "0.62", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
    "Wdk_System_SystemServices",
] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[build-dependencies]
winres = "0.1"

[patch.crates-io]
proc-macro-error2 = { path = "vendor/proc-macro-error2" }
